# rust

./: objective.txt
action/ch02/: 01_non_base2  01_non_base2.rs  02_integer  02_integer.rs  03_float_hazards  03_float_hazards.rs  04_float_other  04_float_other.rs  06_while_true  06_while_true.rs  07_loop  07_loop.rs  08_match  08_match.rs  09_ref  09_ref.rs  11_add_with_lifetimes  11_add_with_lifetimes.rs  12_generic_func  12_generic_func.rs  13_str_simple_pattern  13_str_simple_pattern.rs  14_simple_with_linenums  14_simple_with_linenums.rs  15_simple_with_enumerate  15_simple_with_enumerate.rs  16_array  16_array.rs  17_vec  17_vec.rs  19_read_file  19_read_file.rs  20_bufreader_lines  20_bufreader_lines.rs  readme.md
action/ch03/: 01_not_quite_file  01_not_quite_file.rs  02_mock_file  02_mock_file.rs  03_newtype_pattern  03_newtype_pattern.rs  04_not_quite_file_2  04_not_quite_file_2.rs  05_define_files_neatly  05_define_files_neatly.rs  08_parse_log  08_parse_log.rs  09_file_state  09_file_state.rs  10_skeleton_read_trait  10_skeleton_read_trait.rs  11_implementing_display  11_implementing_display.rs
action/ch04/: 01_check_sats  01_check_sats.rs  02_check_stats  02_check_stats.rs  03_check_sats  03_check_sats.rs  04_sat_mailbox  04_sat_mailbox.rs  05_short_lived_strategy  05_short_lived_strategy.rs  06_check_sats_clone_copy_trait  06_check_sats_clone_copy_trait.rs  07_rc_groundstation  07_rc_groundstation.rs  08_rc_refcell_groundstation  08_rc_refcell_groundstation.rs
action/ch05/: 01_int_vs_int  01_int_vs_int.rs  02_f32_as_u32  02_f32_as_u32.rs  03_to_oblivion  03_to_oblivion.rs  04_bit_patterns  04_bit_patterns.rs  05_impossible_addition  05_impossible_addition.rs  06_endianess  06_endianess.rs  07_isolate_sign_bit  07_isolate_sign_bit.rs  08_isolate_exponent  08_isolate_exponent.rs  09_isolate_mantisa  09_isolate_mantisa.rs  10_visualizing_f32  10_visualizing_f32.rs  12_u8_to_mock_rand  12_u8_to_mock_rand.rs  13_extract_var  13_extract_var.rs
action/ch06/: 1_pointer_intro  1_pointer_intro.rs  2_pointer_detail_show  2_pointer_detail_show.rs  3_print_from_strings  3_print_from_strings.rs  4_raw_pointer  4_raw_pointer.rs  7_memscan_1  7_memscan_1.rs  (+2 more)
action/ch09/_4_clock_3/: Cargo.toml
action/ch09/_4_clock_3/src/: main.rs
email_newsletter/: .dockerignore  Cargo.toml  Dockerfile  sqlx-data.json
email_newsletter/configuration/: local.yaml  production.yaml
email_newsletter/issues/: notes.txt
email_newsletter/scripts/: init_db.sh  notes.txt
email_newsletter/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
email_newsletter/src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
email_newsletter/src/routes/: health_check.rs  subscriptions.rs
email_newsletter/test/: health_check.rs
email_newsletter/tests/: health_check.rs
lib_ecosystem_exercise/: .env  Cargo.toml
lib_ecosystem_exercise/src/: _1_simple_case.rs  _2_array_refs.rs  _3_array_refs_with_const.rs  main.rs
lib_ecosystem_exercise/src/_1_arrayref/: mod.rs
lib_ecosystem_exercise/src/_2_config/: mod.rs
lib_ecosystem_exercise/src/_2_config/_1_simple/: index.rs
lib_ecosystem_exercise/src/_2_config/_2_env_list/: index.rs
lib_ecosystem_exercise/src/_3_hex/: _1_demo.rs
lib_ecosystem_exercise/src/_4_hmac/: _1_demo.rs  mod.rs
(+67 files in other folders)
