[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
serde = "1"
sqlx = { version = "0.5.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="email_newsletter"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
