[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
chrono = "0.4.19"
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
env_logger = "0.9.0"
log = "0.4.14"
serde = "1"
sqlx = { version = "0.5.5", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tracing = "0.1.26"
tracing-actix-web = "0.4.0-beta.8"
tracing-bunyan-formatter = "0.2.4"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2.19", features = ["registry", "env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="email_newsletter"

[dev-dependencies]
actix-rt = "2"
once_cell = "1.8.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = "1"
