[package]
name = "lib_ecosystem_exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
config = "0.13.1"
hex = "0.4.3"
hex-literal = "0.3.4"
hmac = "0.12.1"
secrets = "1.2.0"
serde = "1.0.137"
sha2 = "0.10.2"
