[package]
name = "_4_clock_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.19"
clap = "3.0.14"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
kernel32-sys = "0.2.1"
 
[target.'cfg(not(windows))'.dependencies]
libc = "0.2.117"

[profile.release]
lto = true